[package]
name = "rustrat-common"
version = "0.1.0"
authors = ["Emil Taylor Bye <phptph@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3"
chacha20poly1305 = { version = "0.8", features = ["xchacha20poly1305"] }
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
x25519-dalek = "1.1"