[package]
name = "rustrat-server"
version = "0.1.0"
authors = ["Emil Taylor Bye <phptph@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
rustrat-common = { version = "0.1", path = "../rustrat-common" }
tokio = { version = "1.2", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "offline"]}
chrono = "0.4"
rand = "0.8.0"
warp = "0.3"
base64 = "0.13"
x25519-dalek = "1.1"
log = { version = "0.4", features = ["std", "serde"] }
lazy_static = "1.4.0"