[package]
name = "rustrat-server"
version = "0.1.0"
authors = ["Emil Taylor Bye <phptph@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
rustrat-common = { version = "0.1", path = "../rustrat-common" }

base64 = "0.13"
chrono = "0.4"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["std", "serde"] }
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "offline"]}
tokio = { version = "1.2", features = ["full", "test-util"] }
warp = "0.3"
x25519-dalek = "1.1"